# zemax2raysect

./: build.py  pyproject.toml  setup.py
src/zemax2raysect/: field.py  materials.py  readzmx.py  surface.py
src/zemax2raysect/analysis/: ray_samplers.py
src/zemax2raysect/builders/: abstract.py  common.py  cylindrical.py  flat.py  surface.py
src/zemax2raysect/primitive/: torus.py
