[tool.poetry]
name = "zemax2raysect"
version = "0.1.0"
description = "Convert Zemax' ZMX file into a Raysect Node"
authors = ["Aleksei Shabashov <a.shabashov@iterrf.ru>"]
readme = "README.md"
packages = [{ include = "zemax2raysect", from = "src" }]

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cython = ">=3.0,<4.0"
numpy = ">=1.26,<3.0"
raysect = "0.8.1.post1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
ipympl = "^0.9.2"
sympy = "^1.11.1"

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cython>=3.0,<4.0",
    "numpy>=1.26,<3.0",
    "raysect==0.8.1.post1",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
known_raysect = ['raysect']
known_z2r = ['zemax2raysect']
sections = [
    'FUTURE',
    'STDLIB',
    'FIRSTPARTY',
    'THIRDPARTY',
    'RAYSECT',
    'Z2R',
    'LOCALFOLDER',
]

# [tool.flakeheaven]
# format = "default"
# max_line_length = 99
# max_doc_length = 99
# strictness = "short"
# docstring_style = "numpy"
# docstring_convention = "numpy"
# exclude = ["__init__.py"]

# [tool.flakeheaven.plugins]
# "flake8-*" = ["+*"]
# mccabe = ["+*"]
# pyflakes = ["+*", "-F401", "-F841"]
# pycodestyle = ["+*", "-W503", "-E203"]

[tool.ruff]
line-length = 99
target-version = "py39"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "SIM", "UP", "RET", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pycodestyle]
max-doc-length = 99

